--- a/css/components/card.css
+++ b/css/components/card.css
@@ -1,11 +1,9 @@
 .card-row {
-  width: 60%;
-  height: 300px;
-  display: flex;
-  justify-content: space-around;
+  display: grid;
+  grid-template-rows: 1fr;
+  grid-template-columns: 2fr 1fr 2fr 1fr 2fr;
   align-items: center;
-  margin: 0 auto;
-
+  margin: 10px;
 }
 
 .card {
@@ -13,8 +11,8 @@
   border: 1px solid rgba(200, 200, 200, 0.5);
   box-shadow: 1px 1px rgba(200, 200, 200, 0.5);
   padding: 15px;
-  height: 80%;
-  width: 25%;
+
+
 }
 .card-description  {
   margin-top: 40px;
@@ -31,3 +29,17 @@
   font-size: 50px;
 
 }
+.arrow-right {
+  padding-left: 30px;
+  margin-left: 30px;
+}
+
+@media (max-width: 900px){
+  .card {
+
+  }
+
+}
+
+
+
